most z-index fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  /* z-index: -10; */
+  z-index: 0;
   /* position: relative; */
 }
 
@@ -17,7 +17,7 @@
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  z-index: -10;
+  z-index: 0;
   position: relative;
 }
 
@@ -26,8 +26,8 @@
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  /* z-index: -10; */
-  /* position: relative; */
+  z-index: 0;
+  position: relative;
 }
 
 .screen-overlay {
@@ -36,11 +36,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  /* z-index: -5; */
+  z-index: 1;
   background-size: cover;
   background-position: center;
   min-height: 100vh;
-  position: absolute;
   /* set opacity customly in tailwind with 'opacity-90' */
 }
 
@@ -85,7 +84,6 @@
   height: 283px;
 }
 
-
 .large-card {
   position: relative;
   object-fit: cover;
@@ -98,17 +96,20 @@
   overflow: hidden; /* Prevents vertical overflow */
 }
 
-
 /* Scroll Features on Swiping  */
-/*.scroll-container {
+.scroll-container {
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   height: 100vh;
+  z-index: 0;
 }
 
+/* Generic Section */
 .section {
   height: 100vh;
   scroll-snap-align: start;
+  z-index: 0;
+}
 
 /* Hide on screens larger than the 'md' breakpoint (i.e., desktops) */
 .hiddenOnDesktop {
@@ -129,6 +130,6 @@
   font-size: 84px;
   font-weight: 700;
   line-height: 110px;
-  color: #9095A080;
+  color: #9095a080;
   /* z-index: 0;  */
 }
